Add all Patch Notes

--- a/index.html
+++ b/index.html
@@ -106,6 +106,177 @@
 
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 7/6/2021</small>
+              <p>
+                  <strong>HOTFIX (Heros and Legends)</strong>
+              </p>
+              ===Crafting===
+              <ul>
+                <li>Fixed acid seeker crafting recipe (should be 1 acid pot > 20 obsidian = 200 obs seekers)</li>
+                <li>Numinous Runecrafting Tool should now give bonus to crafting ability and xp when used to craft runes etc</li>
+                <li>Potion of Tanning now updated to include all leather types; adjusted difficulty/xp to be easier to tan any hide using potion vs normal tanning vat but less xp return than a tanning vat</li>
+                <li>Picking Tomatoes typo "tomatos</li>
+                <li>Crasher involving Frieda's new craftable material</li>
+              </ul>
+              ===Spells===
+              <ul>
+                <li>Call of the Gods not giving xp when cast on followers</li>
+                <li>Updated all spells to say "You cast" vs "You have cast" (was 1/2 one way, half the other)</li>
+                <li>Twisting Roots spell now looks through all equipped containers not just backpack root for oozing sap ingredient</li>
+                <li>Faith and Cerebral Thought will now be variable duration based on respective skill level, at level 100 Soul/Mind will last 2 hours</li>
+                <li>Faith will now give experience when cast</li>
+                <li>Cerebral Thought, Brilliance, Insight, Mystic Ward, Resplendence will only give one message when cast on yourself</li>
+                <li>Typo casting Insane - receiving player saw "So and so cast insance"</li>
+              </ul>
+              ===Misc/Quest===
+              <ul>
+                <li>Proudblood Traitor will now give a new chest if you have destroyed yours.</li>
+                <li>Logging in with Tamed Camel will give camel its immortal status and 1M max HP</li>
+                <li>Fixed invalid batches quest text in Farming Taskmaster dialogue</li>
+                <li>Can no longer cancel faction quest; fixed up logic in Lotorian quest</li>
+                <li>Fixed Frost chance on Mannabrotur when using Tonic of Frost Resist or Wyvern's Tooth</li>
+                <li>Added script to Rock Troll kill quest to handle players who are stuck in -1 so I don't have to keep fixing their data (somne were not fixed in data transform in may 2020)</li>
+              </ul>
+            </article>
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 6/30/2021</small>
+              <p>
+                  <strong>HOTFIX (Heroes and Legends)</strong>
+              </p>
+              <ul>
+                <li>Disabled BoTA again on PvP servers; pet which spell cast will still be able to attack in guard mode but they should not present as much of an issue as that 
+                  particular follower. We will permanently fix this with server patch at some point soon and re-enable the blade for its intended PvE purpose.
+                </li>
+                <li>Repentenance bonus from Northern Cleric's Staff disabled fro PvP (still works PvE)</li>
+                <li>Bonus damage to Thunder Strike from Northern Wizard's Staff adjusted down</li>
+                <li>Throwing nets should no longer make you become wanted when used (was checking faction)</li>
+                <li>Wyvern's Tooth weapon now has added protection bonus when used against Wyverns (similar to Mindflayer)</li>
+                <li>Frost resistance from the potion or above weapon now reduces chance of frost to 20% from Mannabrotur/Ancient Crystal Wyverns</li>
+                <li>Fixed bug in print when frozen - no longer will say you have frozen yourself</li>
+              </ul>
+            </article>
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 6/27/2021</small>
+              <p>
+                  <strong>===Client===</strong>
+              </p>
+              <ul>
+                <li>Loss of game interface location settings if client crashes (might not be the only one, but was one of them)</li>
+                <li>Save location and visible state of containers in backpack</li>
+              </ul>
+            </article>
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 6/27/2021</small>
+              <p></p>
+              ===Gear/Items===
+              <ul>
+                <li>Claws of the Northern Wastes - Removed +Nature Spell Dmg from Tooltip</li>
+                <li>Wyvern's Tooth adjusted for effectiveness vs Wyverns; gives Frost resistsance as well</li>
+                <li>Dolphin fin/wyvern heart now reusable</li>
+              </ul>
+              ===Mobs===
+              <ul>
+                <li>Spymaster Rizzick Stats corrected (was completely mitigating melee dmg)</li>
+                <li>Red Armsmaster root duration reduced</li>
+                <li>Adjusted drop rates from Horned Archer/Berserker/Elite Fighter and Marrowsucker/Deceiver/Bonecrusher</li>
+                <li>Adjusted dragon drops - small chance for pristine blue scale on young blues</li>
+              </ul>
+              ===PvP==
+              <ul>
+                <li>Throwing nets no longer make you wanted</li>
+              </ul>
+              ===Maps===
+              <ul>
+                <li>Add safe zone to new spawn gate</li>
+                <li>Add spinning wheel/loom to Hammerfist</li>
+                <li>Kuthos whirlpool spawn loc adjusted so it won't block hallway entrance</li>
+              </ul>
+              ===Crafting===
+              <ul>
+                <li>Crafting for Short Spear and Arcane Arrow yields more per craft now</li>
+              </ul>
+            </article>
+
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 6/19/2021</small>
+              <p>
+                  In addition to the TR content there is a slew of new weapons to hunt off existing bosses, a major change
+                  to the Wanted (temp) system, and a few gear adjusts. Full patch notes below:
+              </p>
+              ===Gear/Items===
+              <ul>
+                <li>Blade of the Ancient is now enabled on PvP servers</li>
+                <li>Ancient Follower abilities have been adjusted slightly</li>
+                <li>Lowered CON req on Red Dragon Leather set to 70 (vs 100)</li>
+                <li>Lowered INT rew for Banished set to 70 (vs 80)</li>
+                <li>Added Wretched shield to drop tables</li>
+                <li>Bonus to CON adjusted for Zule/Frost Coated sets</li>
+              </ul>
+              ===Creatures===
+              <ul>
+                <li>Removed high level pots from vampire bats, greater skeles, other WWI guys</li>
+                <li>Guards now have a chance to snare you</li>
+              </ul>
+              ===Crafting===
+              <ul>
+                <li>New Crafting Recipes for Alchemy, Carpentry, Tailoring, Leatherworking</li>
+                <li>Shock Unguents: 1 Wolverine Brain, 2 Bear Claws, and 1 new ingredient (you have to find out yourself!)</li>
+              </ul>
+              ===Quests===
+              <ul>
+                <li>Adjusts to kill requirements on the Whisperdale archer quests to kill 50/50 creatures (down from 75/100)</li>
+                <li>Adjusted quest kills for zombie gorillas and horned ones (Sully and Abadii quest). Still requires 5000 Zombie Gorilla Guardians and 12500
+                   Horned Ones but each kill will now count double towards your count.
+                </li>
+              </ul>
+              ===Map===
+              <ul>
+                <li>Added some housing plots to TR lands; 1X2 and 2X1 plots are not functional, however, we are aware of this issue and hope to fix in a future patch.</li>
+                <li>All LSP portal exits are no longer safe zones, in its place are Elite Guards.</li>
+                <li>Lotor's Castle is no longer a safe zone</li>
+                <li>Spawns of Ice Demons, Ice Golems, Northern Frost Giants, and Dire Wolves have been adjusted</li>
+                <li>A new (good) spawn point added to winter lands (you must explore and find it)</li>
+              </ul>
+              ===PvP===
+              <ul>
+                <li>Chage to Wanted System: 
+                  <li>Attacking another player will no longer make you wanted; however, if they or you are in sight of a guard (must be fully on screen, not just their toes/lower half) you will become wanted.</li>
+                  <li>Dark guards no longer attack wanted players in towns or Chaos (evil) spawn gates</li>
+                  <li>You can still become wanted by
+                    <li>Looting a corpse or shipwreck</li>
+                    <li>Attacking a neutral NPC (townsperson, etc)</li>
+                    <li>Healing/resurrecting a wanted player</li>
+                    <li>Eating evil sacrifices</li>
+                  </li> 
+              </li>
+              <li>Followers should no longer attack other players in protect mode</li>
+              </ul>
+              ===The Junk Drawer===
+              <ul>
+                <li>Adjusted announcements with the Evil Altar of Offering (SI altar); It should now notify you of its status, and only broadcast at 
+                  incandescent and bright stages on PvE servers.
+                </li>
+              </ul>
+            </article>
+
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 4/9/2021</small>
+              <p>
+                  <Strong>HOTFIX for H/L</Strong>
+              </p>
+              <ul>
+                <li>Marla Moculous quest "Experiments" can be started</li>
+                <li>Trevor Jopkins/Spore Quest "Corruption" can be completed at the Master stage</li>
+              </ul>
+            </article>
+
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 6/3/2021</small>
               ===System===
               <ul>
