Compled the Quest Swamped

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -900,6 +900,120 @@
               </div>
               <!-- End of Tree Trouble -->
               <div class="line"></div>
+              <!-- Start of Swamped! -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="swamped" class="anchor text-center">Swamped</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Rumpda
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Swamped_Bloody_Rag_Of_Rumpda.png" alt="Bloody Rag of Rumpda" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Swamped_Bloody_Rag_Of_Rumpda_stats.png' alt='Bloody Rag of Rumpda Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Swamped_Gold_1650.png' alt='Gold 1650'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Swamped_Rumpda.png" alt="Rumpda">
+                        Speak to <span class="light-red">Rumpda</span>, she needs help with a problem and demands you to help. She has a nice present she will give you. The creatures have invaded the swamp; it is her favorite spot!
+                        She needs you to kill 10 Swamp Slugs.                       
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Swamped</span><span class="orange">, Kill 10 Swamp Slugs for Rumpda of Krog.</span>
+                        <br>
+                        <img class="npc-img" src="Images/BlackSwamp/Swamped_Swamp_Location_Map.png" alt="Swamp Location Map"> Go out of Krog to the west then head northwest. The swamps have all kinds of creature but you are on the hunt for the <span class="light-red">Swamp Slugs.</span><img class="monster-img" src="Images/NPC/Monsters/Swamp_Slug.png" alt="Swamp Slug"> 
+                        As you kill the Swamp Slugs you will be updated on the count. <span class="green">QUEST UPDATE: You've killed 10 Swamp Slugs for Rumpda.</span> When you have kill 10 you will receive a quest update.                      
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Swamped</span><span class="orange">, You have squished all 10 Swamp Slugs. Return to Rumpda!</span>
+                        <br>
+                        Rumpda is glad to you back. Now she has a problem with the lights in the Swamp. She wants you to take care of the Marsh Lights. Kill 10 of them.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Swamped</span><span class="orange">, Rumpda rewarded you. Return for more work!</span>
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">300 Gold</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">3,960</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Swamped</span><span class="orange">, Kill 10 Marsh Lights for Rumpda.</span>
+                        <br>
+                        Head back out to the swamp and kill <span class="light-red">Marsh Lights</span><img class="monster-img" src="Images/NPC/Monsters/Marsh_Light.png" alt="Marsh Light"> getting updates along the way. <span class="green">QUEST UPDATE: You've killed 10 Marsh Lights for Rumpda.</span> Once you have completed your task you will be updated to Return to Rumpda
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Swamped</span><span class="orange">, You have put out the Marsh Lights. Return to Rumpda in Krog!</span>
+                        <br>
+                        You helped Rumpda again and now she likes you Come back for more work if you are bored.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Swamped</span><span class="orange">, Rumpda rewarded you for your help. Return for another task.</span>
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">350 Gold</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">7,920</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        The stupid Lizard Man broke Rumpda's cloths line. She wants you to make them go away. Kill 10 of them
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Swamped</span><span class="orange">, Kill 10 Lizard Men for Rumpda.</span>
+                        <br>
+                        Head back out to the swamp and kill <span class="light-red">Lizard Man</span><img class="monster-img" src="Images/NPC/Monsters/Lizard_Man.png" alt="Lizard Man"> getting updates along the way. <span class="green">QUEST UPDATE: You've killed 10 Lizard Man for Rumpda.</span> Once you have completed your task you will be updated to Return to Rumpda 
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Swamped</span><span class="orange">, Rumpda's clothesline has been avenged. Return to Rumpda</span>
+                        <br>
+                        She thanks you. There is one more job for you. Come back if you want!
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Swamped</span><span class="orange">, Rumpda rewarded you for your help. Return for one more job!</span>
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">400 Gold</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">11,880</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        The swamp is almost safe for Rumpda again but one big problem. Big mossy creature steal Rumpda's raisins when she at swamp. She wants you to hunt down swamp-man. Kill 10 Shamblers and teach them a lesson for stealing raisins!
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Swamped</span><span class="orange">, Kill 10 Shamblers for Rumpda.</span>
+                        <br>
+                        Head back out to the swamp and kill <span class="light-red">Shamblers</span><img class="monster-img" src="Images/NPC/Monsters/Shambler.png" alt="Shambler"> getting updates along the way. <span class="green">QUEST UPDATE: You've killed 10 Shamblers for Rumpda.</span> Once you have completed your task you will be updated to Return to Rumpda 
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Swamped</span><span class="orange">, You have killed 10 raisin stealing Shamblers. Return to Rumpda in Krog.</span>
+                        <br>
+                        You do all Rumpda ask. She is grateful and she found her raisins.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Bloody Rag of Rumpda</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">600 Gold</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">15,840</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        You tidied up the Swamp for Rumpda
+                      </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Tree Trouble -->
+              <div class="line"></div>
               <!-- Start of The Art of Combat -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
