--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -71,7 +71,7 @@
                           <a href="#swamped">Swamped</a>
                         </li>
                         <li>
-                          <a href="#"></a>
+                          <a href="#greatDisrepair">Great Disrepair</a>
                         </li>
                         <li>
                           <a href="#"></a>
@@ -1032,7 +1032,127 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Tree Trouble -->
+              <!-- End of Swamped! -->
+              <div class="line"></div>
+              <!-- Start of Great Disrepair! -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="greatDisrepair" class="anchor text-center">Great Disrepair</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Prudge
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Great_Disrepair_Large_Knapsack.png" alt="Large Knapsack" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Great_Disrepair_Large_Knapsack_Stats.png' alt='Large Knapsack Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Great_Disrepair_Gold_1000.png' alt='Gold 1000'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Great_Disrepair_Prudge.png" alt="Prudge">
+                        Speak to <span class="light-red">Prudge</span>, he needs help fixing the swewer, it keeps flooding swamps to the west now they are blaming Prudge.
+                        He needs you to fix the levers in the tunnel, but he doesn't remember the order to pull the levers he sends you to speak to his aunt Kekant in Krog.                       
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Prudge does not remember how to pull levers to fix the Krog Sewer, but his Aunt Rekant might. Vist her in Krog.</span>
+                        <br>
+                        <img class="npc-img" src="Images/BlackSwamp/Great_Disrepair_Rekant.png" alt="Rekant"><span class="light-red">Aunt Rekant</span> can be found upstairs in the Provisioner shop. Let her know you are here to help her nephew. She will only help you if you help her. Her husband Unga went to Maraket to find work and has not come back. Her friend Aloca said he is going around with a new girl. Go find out for her and she will help you out.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Find out if Unga in Maraket has a new woman.</span>
+                        <br>
+                        Head south to Maraket and find <img class="npc-img" src="Images/BlackSwamp/Great_Disrepair_Unga.png" alt="Unga"><span class="light-red">Unga</span>. He will ask you if you want to make some gold. Accept his offer then he will ask you to take a note to Teppu. He and Teppu had a fight and she is avoiding him. Accept the offer to take the note to Teppu.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Deliver note to Teppu in Maraket.</span>
+                        <br>
+                        <img class="npc-img" src="Images/BlackSwamp/Great_Disrepair_Teppu.png" alt="Teppu">Give the note to <span class="light-red">Teppu</span>, she reads it tells you Unga is so sweet that he wants to marry her. 
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">OPTION: 1</strong> Tell her Unga is already married.</li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">OPTION: 2</strong> Tell her she is one lucky lady.</li>
+                        </ul>
+                        <hr>
+                        <strong class="light-blue">OPTION: 1</strong>
+                        <br>
+                        <hr>
+
+                        <strong class="light-blue">OPTION: 2</strong>
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Return to Unga in Maraket.</span>
+                        <br>
+                        Speak to Unga, he ask if you gave her the note. You tell him that she is madly in love with him. He says he is good with the ladies and you saved him this time.
+                        <br>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">100 Gold</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">990</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Return to Rekant in Krog.</span>
+                        <br>
+                        Speak with Rekant in Krog. You inform her that Unga is with a new girl. She said she would head to Maraket and skin him like a warg! Her brother Wuhn will help with the exact order of levers.
+                        Tell him you are a fiend of Rekant and she owes you a favor.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Speak with Wuhn in Krog about the sewer levers.</span>
+                        <br>
+                        <img class="monster-img" src="Images/BlackSwamp/Great_Disrepair_Wuhn.png" alt="Wuhn"> Find Wuhn outside of the provisioner shop walking around. He talks about how he has told Prudge many times of the lever order. He gives you the order that is required. A-F-B-D-E-C
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,980</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Wuhn told you the order of the sewer levers: A-F-B-D-E-C.</span>
+                        <br>
+                        <img class="monster-img" src="Images/BlackSwamp/Great_Disrepair_Location_Map.png" alt="Location Map"> Retun to the sewer if you want to you can talk to Prudge but you don't have to. Go down the ladder in to the bottom layer of the Sewer. Provided is a map of the location of the switches.
+                        There are many different types of creatures in the sewers. If you are low level be carefull if you are on your own. At each lever there is a sign that has the label of the leter on the wall. When you pull the lever <img class="monster-img" src="Images/BlackSwamp/Great_Disrepair_Lever.png" alt="Lever"> you will get an update.
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="light-red"> Lever A</span><span class="ml-2 green">The sound of flowing water seems to be lessening</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="light-red"> Lever F</span><span class="ml-2 green">The sound of flowing water seems to be lessening</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="light-red"> Lever B</span><span class="ml-2 green">The sound of flowing water seems to be lessening</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="light-red"> Lever D</span><span class="ml-2 green">The sound of flowing water is very faint</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="light-red"> Lever E</span><span class="ml-2 green">The sound of flowing water is almost nonexistent</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="light-red"> Lever C</span><span class="ml-2 green">The sound of flowing water ceases</span></li>
+                        </ul>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, You fixed the sewer! Return to Prudge in the upper sewer.</span>
+                        Prudge thanks you for the help. You saved Prudges job! He rewards you with his weeks pay and an item that was flushed down on accident.
+
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Large Knapsack</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">1,000 Gold</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 500 faction with the city of Krog!</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">79,200</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        You helped Prudge fix the sewer!
+                      </p>
+                      <p class="mt-4 py-3 text-center quest-complete">
+                        Quest Complete
+                      </p>  
+                  </div>
+                </div>
+              </div>
+              <!-- End of Great Disrepair! -->
               <div class="line"></div>
               <!-- Start of The Art of Combat -->
               <div class="card bg-main half-width mb-5">
