Completed Hole of Tears

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -74,7 +74,7 @@
                           <a href="#greatDisrepair">Great Disrepair</a>
                         </li>
                         <li>
-                          <a href="#"></a>
+                          <a href="#holeOfTears">Hole of Tears</a>
                         </li>
                         <li>
                           <a href="#"></a>
@@ -1095,8 +1095,17 @@
                         <hr>
                         <strong class="light-blue">OPTION: 1</strong>
                         <br>
+                        WHAT? He told me my sister fall into Wuhn's sewer and never come out. She goes off to deal with both of them. She rewards you with 1000 gold for telling her about this.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Return to Unga in Maraket.</span>
+                        <br>
+                        When you return to Unga he is not happy you told her about Rekant, says he should run a sword though you good!
+                        <br>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">1,000 Gold</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">550</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>                        
                         <hr>
-
                         <strong class="light-blue">OPTION: 2</strong>
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Return to Unga in Maraket.</span>
@@ -1153,6 +1162,64 @@
                 </div>
               </div>
               <!-- End of Great Disrepair! -->
+              <div class="line"></div>
+              <!-- Start of Hole of Tears -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="holeOfTears" class="anchor text-center">Hole of Tears</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Roasting</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Kobold Prisoner
+                          </td>
+                          <td>
+                            <li>EXP</li>
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Hole_of_Tears_Kobold_Prisoner.png" alt="Kobold Prisoner">
+                        Speak to <span class="light-red">Kobold Prisoner</span>, He knows a secret, his secret is locked in a hole of tears. Tears ran dry and he was sacrificed to bring back tears.
+                        His secret is his doom. He will give you secret if you bring him treats. He wants five yummy roasted spider legs, bring them to him; he will tell you secret!                      
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Hole of Tears</span><span class="orange">, Bring 5 Cooked Spider Legs to the Kobold Prisoner.</span>
+                        <br>
+                        Once you give him the five <span class="light-red">Cooked Spider Legs</span> <img src="Images/BlackSwamp/Hole_of_Tears_Cooked_Spider_Legs.png" alt="Cooked Spider Legs"> he will be happy and tell you his secret, It is a dry well in the elder camp to the south, but there is also great evil in there.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,320</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        The prisoner revealed that the dry well in the Kobold camp southeast of Krog is a secret entrance to and evil place.
+                      </p>
+                      <p class="mt-4 py-3 text-center quest-complete">
+                        Quest Complete
+                      </p>  
+                  </div>
+                </div>
+              </div>
+              <!-- End of Hole of Tears -->
               <div class="line"></div>
               <!-- Start of The Art of Combat -->
               <div class="card bg-main half-width mb-5">
