Added new patch notes

--- a/index.html
+++ b/index.html
@@ -106,6 +106,100 @@
 
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 7/10/2021</small>
+              <strong>Patch</strong>
+              <p>
+                  ===Map===
+                  <ul>
+                    <li>Fix for the spawn issue with icebergs/Frieda's lair during Spawn Increase</li>
+                    <li>Fixed map where mobs in Frieda's are spawing into fire pits in that dungeon</li>
+                    <li>fixed another section of map behind the staged SoG in Frieda's where mobs are spawning</li>
+                    <li>Removed double guard spawns in LSP</li>
+                  </ul>
+                  ===Mobs===
+                  <ul>
+                    <li>Fixed llanpa's spawn</li>
+                    <li>Wandering Spirt(>>> of Josody quest NPC) no longer hostile, just regular ol evil ghost</li>
+                    <li>Adjusted chances on drop tables (up) for Cyclops</li>
+                    <li>Drop chances on Greater Red/Gold/Green Dragons improved slightly for drops on Greater Dragon, Sekhet's Wrath, and Eternium gear</li>
+                    <li>Adjusted Eternium drop chance on Greater/younger blues</li>
+                    <li>Adjusted chance for young and greater dragons to drop dragon scales (up slightly) except pristine blue scales</li>
+                    <li>Replaced vessel of isos static npc with an altar with the name (but not attackable/alive) to distinguish to players if it is attackable or not</li>
+                    <li>Added Myrmidon treasure to Talazarian Legionairres</li>
+                    <li>Added Nordic Warrior treasure to Talazarian Soldiers</li>
+                    <li>Adjusted chances to drop Demonic Gear on Ice Demons, added to Crystal Golems at low rate</li>
+                  </ul>
+                  ===Items===
+                  <ul>
+                    <li>Tooltip on Graverobber's Mark said +7 All Skills, should be +7 All Stats</li>
+                    <li>Adjusted Scorched set materials to be more appropriate (metal > dark iron, others flawless leather)</li>
+                    <li>Added Weight Reduction to Tooltip on Worn Quiver</li>
+                    <li>Fixed tootip on Dalvon Leggings</li>
+                    <li>Removed Staff of Elemental Mastery from Demon Spire drop table (Expansion content)</li>
+                    <li>Robe of the Banished adjust</li>
+                    <li>Changed looking glass material to heartwood (was magic Misc)</li>
+                    <li>Updated Wretched set bonuses and resists</li>
+                    <li>Updated Banished level requirement and resists</li>
+                    <li>Adjusted Eagle Eye order stats (inc protection on amulet/ring, increased resists on boots/gloves, added str to gloves); set level req now 108 vs 110</li>
+                    <li>Blue Revenge set stat and resistance adjusts</li>
+                    <li>Increased Con bonus to Zule helm, boots, belt</li>
+                    <li>Increased Con, lowered Dex on the Frost Coated Steel Helm</li>
+                    <li>Added Con to Sorcerer Gloves/Runners/Shadowstep and Ritual Belt/Leggings/Boots; reduced or removed bonus HP to those pieces</li>
+                    <li>Sea Skin Sail gives +2 Sailing (said 2.5)</li>
+                    <li>Weight Reduction on Wyvern Quiver upped to 99% to match Adventurer's pack</li>
+                    <li>Ship deeds now have a material so that they can be restored/repaired</li>
+                    <li>Holy Armor of Arda/unholy Plate of Redwake sets req 105</li>
+                    <li>Wyvern Leather set adjust; req level 70 and 30 DEX</li>
+                    <li>Coldsteel set adjust; req level 70 and 50 STR</li>
+                    <li>Demonic set adjust; req Level 90 and 90 STR</li>
+                    <li>crystalcloth Legs/Tunic set adjust; Req level 80 and 96 INT</li>
+                    <li>Silversteel set adjust; req level 96 and 100 InT</li>
+                    <li>Swiftwind set adjust; req level 75 and 80 DEXT</li>
+                    <li>Fixed Equip of the Wyvern's Tooth, Ghoul Blade, Battleblood, Thrakk's to require master of their respective category to weild</li>
+                  </ul>
+                  ===TradeSkills===
+                  <ul>
+                    <li>Mining Silver/Dark/Gold Ore now tied to account access to TR Expansion in the event you can find some of those tiles in the world outside of TR land</li>
+                    <li>Potion of Tanning now uses skill adjustments to determine difficulty</li>
+                    <li>Malacinth requires level 25 to forage now</li>
+                    <li>Plain Cake Dough can now be stacked, reused, sold at shops</li>
+                    <li>Added price to totems that had no gold cost (totem of stamina, totem of the wizard)</li>
+                    <li>Can make multiple lobster traps at once (skill/10 +5</li>
+                    <li>Increased slightly the chance to catch blue lobster</li>
+                  </ul>
+                  ===Quests===
+                  <ul>
+                    <li>Erickson's quest which gives Ring of Eight now requires level 30 sailing to take</li>
+                    <li>System Message when Vessel of Isos is destroyed for Disciple of Talazar priest quest "Of a Venomous Spirit"</li>
+                  </ul>
+                  ===Spellcasting===
+                  <ul>
+                    <li>Fixed Ignite spell's Eldrritch Flame particle (loc was off & would fade after 10 seconds or so)</li>
+                    <li>Added script to destroy the Eldritch Flame object (little green ball that would persist in the world)</li>
+                    <li>Ignite spell lasts 2 min</li>
+                    <li>Repair Wood (Nature spell) will repair broken lobster traps into usable lobster traps</li>
+                  </ul>
+                  ===The Junk Drawer===
+                  <ul>
+                    <li>Fixed VIP pet types which were not marked containers; they cannot be given anything but they were not giving the error "you cannot offer anything to this NPC" unless marked containers.</li>
+                    <li>VIP pet cows can be milked, chickens can be searched for eggs (using Inventory option in follower window)</li>
+                    <li>Evil Altar of Offering (SI altar) will now only server announce 1x when reaching incandescent/bright stages</li>
+                  </ul>
+              </p>
+            </article>
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 7/10/2021</small>
+              <strong>Client</strong>
+              <p>
+                  A new client is available now with a fix for containers
+                  <ul>
+                    <li>Their position will be saved each time you move so this should fix the issue with containers resetting when going though certain cave/ladders/portals</li>
+                  </ul>
+              </p>
+            </article>
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 7/6/2021</small>
               <p>
                   <strong>HOTFIX (Heros and Legends)</strong>
